--- a/src/app/maps/pages/zoom-page/zoom-page.component.html
+++ b/src/app/maps/pages/zoom-page/zoom-page.component.html
@@ -1,1 +1,23 @@
-<p>zoom-page works!</p>
+<div id="map" #map></div>
+
+<div class="floating-range p-2">
+  <div class="floating-content">
+
+    <button class="btn btn-primary"> - </button>
+
+    <input type="range"
+    class="form-range px-2"
+    min="-2"
+    max="18"
+    [value]="zoom"
+    >
+
+    <button class="btn btn-primary"> + </button>
+  </div>
+
+  <span class="form-label">
+    Zoom: {{ zoom | number: '2.2-2' }}
+    <br>
+    Lng,Lat {{ 'algo' }}
+  </span>
+</div>
