--- a/src/app/maps/pages/zoom-page/zoom-page.component.html
+++ b/src/app/maps/pages/zoom-page/zoom-page.component.html
@@ -20,6 +20,6 @@
   <span class="form-label">
     Zoom: {{ zoom | number: '2.2-2' }}
     <br>
-    Lng,Lat {{ 'algo' }}
+    Lng,Lat {{ currentLngLat.lng | number: '2.6-6' }}, {{ currentLngLat.lat | number: '2.6-6' }}
   </span>
 </div>
